--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>GitJob - Сервис подбора IT специалистов</title>
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <article class="main__content-wrapper">
+        <div class="main__content-wrapper">
             <aside class="main-content">
                 <h1 class="main-content__title">
                     Умный подбор IT <br>
@@ -54,10 +55,57 @@
                     <img class="people-img" src="./img/main-people.png" alt="people">
                 </section>
             </aside>
-        </article>
-        <article>
+        </div>
+        <div data-aos="fade-right" data-aos-offset="200">
             <h2 class="main__header-title">За 60 секунд покажем, как работает <span>GitJob</span></h2>
-        </article>
+            <div class="main__video-wrapper">
+                <iframe class="main-video" width="560" height="315" src="https://www.youtube.com/embed/Zoa0X-YwHAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="main__video-description">Получите доступ к полному функционалу <span class="green">GitJob</span> бесплатно на 7 дней</p>
+                <button class="main__video-button">Получить доступ</button>
+            </div>
+        </div>
+        <div class="main__content-wrapper" data-aos="fade-right" data-aos-offset="400">
+            <aside class="main-content">
+                <h1 class="section-content__title">
+                    В умном режиме <span class="green">GitJob</span> <br>
+                    <span class="regular">
+                        анализирует манифест <br>
+                        файл проекта
+                    </span>
+                </h1>
+                <p class="main-content__description">
+                    Это ключевое отличие нашего сервиса
+                </p>
+                <h6 class="section-content__subtitle">Указываете ссылку на ваш репозиторий</h6>
+                <nav class="slider-navigation">
+                    <button href="#" class="main-content__link--outline" id="sliderLeft">
+                        <img src="./svg/arrow-right.svg" alt="arrow" class="main__arrow-right">
+                    </button>
+                    <div class="wrapper-radio">
+                        <input type="radio" name="radio" class="radio" id="radio" checked />
+                        <label for="radio"></label>
+                        <input type="radio" name="radio" class="radio" id="radio2" />
+                        <label for="radio2"></label>
+                        <input type="radio" name="radio" class="radio" id="radio3" />
+                        <label for="radio3"></label>
+                    </div>
+                    <button href="#" class="main-content__link--outline" id="sliderRight">
+                        <img src="./svg/arrow-right.svg" alt="arrow" class="main__arrow-right">
+                    </button>
+                </nav>
+            </aside>
+            <aside class="main__wrapper-info">
+                <section class="main-illustration">
+                    <img src="./img/main-picture.png" alt="illustration" class="illustration-item">
+                    <p class="main-illustration__description">
+                        
+                    </p>
+                </section>
+                <section class="main-people">
+                    <img class="people-img" src="./img/main-people.png" alt="people">
+                </section>
+            </aside>
+        </div>
     </main>
     <aside class="step-line">
         <div class="wrapper-line">
@@ -80,5 +128,9 @@
         <a href="#" class="social-network__item"><svg class="social-network__icon" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="19.5" stroke="black"/><path d="M23.2 20C23.2 20.6329 23.0123 21.2516 22.6607 21.7778C22.3091 22.3041 21.8093 22.7142 21.2246 22.9564C20.6399 23.1986 19.9965 23.262 19.3757 23.1385C18.755 23.015 18.1848 22.7103 17.7373 22.2627C17.2897 21.8152 16.985 21.245 16.8615 20.6243C16.738 20.0035 16.8014 19.3601 17.0436 18.7754C17.2858 18.1907 17.6959 17.6909 18.2222 17.3393C18.7484 16.9877 19.3671 16.8 20 16.8C20.8484 16.801 21.6618 17.1384 22.2617 17.7383C22.8616 18.3382 23.199 19.1516 23.2 20ZM30 15.6V24.4C29.9983 25.8847 29.4078 27.3081 28.3579 28.3579C27.3081 29.4078 25.8847 29.9983 24.4 30H15.6C14.1153 29.9983 12.6919 29.4078 11.6421 28.3579C10.5922 27.3081 10.0017 25.8847 10 24.4V15.6C10.0017 14.1153 10.5922 12.6919 11.6421 11.6421C12.6919 10.5922 14.1153 10.0017 15.6 10H24.4C25.8847 10.0017 27.3081 10.5922 28.3579 11.6421C29.4078 12.6919 29.9983 14.1153 30 15.6ZM24.8 20C24.8 19.0506 24.5185 18.1226 23.9911 17.3333C23.4636 16.5439 22.714 15.9287 21.8369 15.5654C20.9598 15.2021 19.9947 15.107 19.0636 15.2922C18.1325 15.4774 17.2772 15.9346 16.6059 16.6059C15.9346 17.2772 15.4774 18.1325 15.2922 19.0636C15.107 19.9947 15.2021 20.9598 15.5654 21.8369C15.9287 22.714 16.5439 23.4636 17.3333 23.9911C18.1226 24.5185 19.0506 24.8 20 24.8C21.2726 24.7986 22.4927 24.2924 23.3925 23.3925C24.2924 22.4927 24.7986 21.2726 24.8 20ZM26.4 14.8C26.4 14.5627 26.3296 14.3307 26.1978 14.1333C26.0659 13.936 25.8785 13.7822 25.6592 13.6913C25.4399 13.6005 25.1987 13.5768 24.9659 13.6231C24.7331 13.6694 24.5193 13.7836 24.3515 13.9515C24.1837 14.1193 24.0694 14.3331 24.0231 14.5659C23.9768 14.7987 24.0005 15.0399 24.0913 15.2592C24.1822 15.4785 24.336 15.6659 24.5333 15.7978C24.7307 15.9296 24.9627 16 25.2 16C25.5183 16 25.8235 15.8736 26.0485 15.6485C26.2736 15.4235 26.4 15.1183 26.4 14.8Z" fill="#333333"/></svg></a>
         <a href="#" class="social-network__item"><svg class="social-network__icon" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" fill="#333333"/><path d="M26.5958 20.69C26.2725 20.2817 26.365 20.1 26.5958 19.735C26.6 19.7308 29.2692 16.0425 29.5442 14.7917L29.5458 14.7908C29.6825 14.335 29.5458 14 28.885 14H26.6983C26.1417 14 25.885 14.2875 25.7475 14.6092C25.7475 14.6092 24.6342 17.2742 23.0592 19.0017C22.5508 19.5008 22.3158 19.6608 22.0383 19.6608C21.9017 19.6608 21.6892 19.5008 21.6892 19.045V14.7908C21.6892 14.2442 21.5333 14 21.0725 14H17.6342C17.285 14 17.0775 14.255 17.0775 14.4925C17.0775 15.0108 17.865 15.13 17.9467 16.5883V19.7525C17.9467 20.4458 17.8208 20.5733 17.5417 20.5733C16.7983 20.5733 14.9942 17.8975 13.925 14.835C13.7092 14.2408 13.4983 14.0008 12.9375 14.0008H10.75C10.1258 14.0008 10 14.2883 10 14.61C10 15.1783 10.7433 18.0042 13.4567 21.7375C15.265 24.2858 17.8117 25.6667 20.1283 25.6667C21.5208 25.6667 21.6908 25.36 21.6908 24.8325C21.6908 22.3975 21.565 22.1675 22.2625 22.1675C22.5858 22.1675 23.1425 22.3275 24.4425 23.5567C25.9283 25.0142 26.1725 25.6667 27.0042 25.6667H29.1908C29.8142 25.6667 30.13 25.36 29.9483 24.755C29.5325 23.4825 26.7225 20.865 26.5958 20.69Z" fill="white"/></svg></a>
     </aside>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
